# MLOPS_Proj

./: Dockerfile  Heroku_pwd.txt  README.md  access.txt  app.py  main.py  push_data.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yaml
Artifacts/04_23_2025_13_00_12/data_validation/: test.csv
Artifacts/04_23_2025_13_14_27/data_validation/: test.csv  train.csv
Artifacts/04_23_2025_13_15_19/data_validation/: train.csv
Artifacts/04_23_2025_13_20_13/data_validation/: test.csv
Artifacts/04_23_2025_13_26_46/data_validation/: test.csv
Artifacts/04_23_2025_13_30_03/data_validation/: test.csv
Artifacts/04_23_2025_13_32_14/data_validation/: test.csv
Artifacts/04_23_2025_13_33_32/data_validation/: test.csv
Artifacts/04_23_2025_13_43_46/data_validation/: train.csv
Artifacts/04_23_2025_13_45_37/data_validation/: test.csv  train.csv
Artifacts/04_24_2025_08_13_04/data_validation/: test.csv
Artifacts/04_24_2025_08_25_48/data_validation/: test.csv  train.csv
Network_Data/: test_phisingData.csv
mlruns/0/: meta.yaml
networksecurity/NetworkSecurityProject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
networksecurity/cloud/: s3_syncer.py
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/test/: logger.py
templates/: table.html
valid_data/: test.csv
(+178 files in other folders)
