[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NetworkSecurityProject"
version = "0.0.1"
description = "An Network security project with structured packaging"
authors = [{ name="G. Hari", email= "g.harisudhan76@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"


[tool.setuptools.packages.find]
where = ["networksecurity"]